[package]
name = "rust-decimal-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.35.0", features = ["maths"] }
solana-program = "~1.18"

[dev-dependencies]
solana-sdk = "~1.18"
solana-program-test = "~1.18"
rand = "0.8.5"
